# communism

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.run/: Run deploy-sentinel.run.xml  Run sentinel.run.xml
common/: Cargo.toml
common/src/: lib.rs
console/: Cargo.toml  Trunk-release.toml  Trunk.toml  index.html
console/src/: interop.rs  main.rs
deployment/: Cargo.toml  README.md
deployment/src/: lib.rs  path_util.rs  static_deployment.rs
fov-calculator/: .gitignore  Cargo.toml  Trunk-release.toml  Trunk.toml  index.html
fov-calculator/src/: lib.rs  main.rs
self-signed/: cert.crt  cert.key
sentinel/: Cargo.toml  README.md  scratch.http  sentinel.service
sentinel/src/: main.rs
