[workspace]
members = ["sentinel", "console", "common", "deployment", "fov-calculator"]


[profile.release]
lto = true

[profile.release.package.fov-calculator]
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# link time optimization using using whole-program analysis
opt-level = 'z'

[profile.release.package.console]
codegen-units = 1
opt-level = 'z'
