[package]
name = "deployment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.9"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
aws-config = "0.9"
anyhow = "1.0"
futures = "0.3"
walkdir = "2.3"
tui = "0.17"
crossterm = "0.22"
tempfile = "3.3"
async-compression = {version="0.3", features = ["tokio", "brotli"]}